repackage gc code

--- a/cmd/web/admin/web/index.html
+++ b/cmd/web/admin/web/index.html
@@ -6,9 +6,11 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsoneditor@10.1.0/dist/jsoneditor.min.css"/>
     <link rel="stylesheet" href="tarantula.admin.css"/>
     <script src="https://cdn.jsdelivr.net/npm/jsoneditor@10.1.0/dist/jsoneditor.min.js"></script>
@@ -17,9 +19,17 @@
     <title>iCodeSoftware</title>
 </head>
 <body>
-<h1>Tarantula Go Admin</h1>
+<h1 class="tx-roboto">Tarantula Go Admin H1</h1>
+<h1>Tarantula Go Admin H1</h1>
+<h2 class="tx-oswald">Tarantula Go Admin H2</h2>
+<h3 class="tx-sofia">Tarantula Go Admin H3</h3>
+<h3>Tarantula Go Admin H3</h3>
+<p class="w3-xxxlarge tx-oswald">Tarantula Go Admin</p>
+<span>LOGIN<i class="material-symbols-outlined">login</i></span>
+<span>LOGOUT<i class="material-symbols-outlined">logout</i></span>
+<span>DELETE<i class="material-symbols-outlined">delete</i></span>
 <script>
-    
+    console.log(Admin.hello());    
 </script>
 </body>
 </html>
