--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -14,12 +14,110 @@
     <title>iCodeSoftware</title>
     </head>
     <body>
-        <div class="w3-container w3-teal tx-oswald">
-            <span id="tx-title">Admin</span>
-            <i class="material-symbols-outlined tx-white-icon-24">login</i>
+        <div class="w3-display-container w3-teal tx-content-120">
+            <div class="w3-display-topleft w3-padding">
+                <span><i class="material-symbols-outlined tx-margin-left-8 tx-orange-icon-48">widgets</i></span>
+            </div>
+            <div class="w3-display-bottomleft w3-padding">
+               <span class="tx-margin-left-8 tx-text-32">Tarantula Web Admin Tool</span>             
+            </div>
+            <div class="w3-display-bottomright w3-padding">
+               <span class="tx-margin-right-8 tx-text-16">Powered By iCodeSoftware LLC</span>             
+            </div>
         </div>
+        <div class="w3-flex">
+            <div class="w3-padding w3-green" style="flex-grow:2">
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+                <div class="w3-panel"><span>ITEM1</span></div>
+            </div>
+            <div class="w3-padding w3-white" style="flex-grow:7">
+             <div class="w3-display-container w3-teal tx-content-120">
+            <div class="w3-display-topleft w3-padding">
+                <span><i class="material-symbols-outlined tx-margin-left-8 tx-orange-icon-48">widgets</i></span>
+            </div>
+            <div class="w3-display-bottomleft w3-padding">
+               <span class="tx-margin-left-8 tx-text-32">Tarantula Web Admin Tool</span>             
+            </div>
+            <div class="w3-display-bottomright w3-padding">
+               <span class="tx-margin-right-8 tx-text-16">Powered By iCodeSoftware LLC</span>             
+            </div>
+        </div>
+         <div class="w3-display-container w3-teal tx-content-120">
+            <div class="w3-display-topleft w3-padding">
+                <span><i class="material-symbols-outlined tx-margin-left-8 tx-orange-icon-48">widgets</i></span>
+            </div>
+            <div class="w3-display-bottomleft w3-padding">
+               <span class="tx-margin-left-8 tx-text-32">Tarantula Web Admin Tool</span>             
+            </div>
+            <div class="w3-display-bottomright w3-padding">
+               <span class="tx-margin-right-8 tx-text-16">Powered By iCodeSoftware LLC</span>             
+            </div>
+        </div>
+         <div class="w3-display-container w3-teal tx-content-120">
+            <div class="w3-display-topleft w3-padding">
+                <span><i class="material-symbols-outlined tx-margin-left-8 tx-orange-icon-48">widgets</i></span>
+            </div>
+            <div class="w3-display-bottomleft w3-padding">
+               <span class="tx-margin-left-8 tx-text-32">Tarantula Web Admin Tool</span>             
+            </div>
+            <div class="w3-display-bottomright w3-padding">
+               <span class="tx-margin-right-8 tx-text-16">Powered By iCodeSoftware LLC</span>             
+            </div>
+        </div>    
+            </div>
+        </div>
+        
+    
         <script>
-            document.querySelector('#tx-title').innerHTML = Admin.test();
+            //document.querySelector('#tx-title').innerHTML = Admin.test();
         </script>
     </body>
 </html>
